<resources>
    <string name="app_name">DrawingApp</string>
    <string name="btn_brush">Select Brush Size</string>
    <string name="brush_size">Brush Size</string>
    <string name="btn_save">Save Drawing</string>
    <string name="btn_gallery">Gallery</string>
    <string name="btn_pick_color">Choose Color</string>
    <string name="btn_brush_size">Change Brush Size</string>
    <string name="btn_undo">Undo Drawing</string>
    <string name="drawing_Image_description">Gallery Image</string>
    <string name="nav_setting">Settings</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_share">Share Drawing</string>
</resources>