<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/canvas_card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/itemLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_weight="0.8"

        app:cardElevation="3dp"
        app:cardCornerRadius="12dp"
        app:strokeColor="#CCCCCC"
        app:strokeWidth="2dp"
        app:cardBackgroundColor="@android:color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/drawing_canvas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <ImageView
                android:id="@+id/gallery_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/drawing_Image_description"/>

            <com.project.drawingapp.DrawingView
                android:id="@+id/drawing_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/itemLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/paint_tools_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/canvas_card"
        app:layout_constraintVertical_weight="0.1">

        <Button
            android:id="@+id/btn_red"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:backgroundTint="@color/red"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_blue"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_blue"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:backgroundTint="@color/blue"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_green"
            app:layout_constraintStart_toEndOf="@+id/btn_red"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_green"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:backgroundTint="@color/green"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_black"
            app:layout_constraintStart_toEndOf="@+id/btn_blue"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_black"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:backgroundTint="@color/black"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_erase"
            app:layout_constraintStart_toEndOf="@+id/btn_green"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_erase"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:cornerRadius="10dp"
            app:icon="@drawable/ic_clean"
            app:iconGravity="top"
            app:iconSize="24dp"
            app:iconTint="@android:color/white"
            android:backgroundTint="@color/cardview_dark_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_black"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/paint_tools_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/itemLayout"
        app:layout_constraintVertical_weight="0.1">

        <Button
            android:id="@+id/btn_gallery"
            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/btn_gallery"
            android:scaleX="1.5"
            android:scaleY="1.5"
            app:icon="@drawable/ic_gallery"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_save"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_save"
            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/btn_save"
            android:scaleX="1.5"
            android:scaleY="1.5"
            app:icon="@drawable/ic_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_color_pick"
            app:layout_constraintStart_toEndOf="@+id/btn_gallery"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_color_pick"
            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/btn_pick_color"
            android:scaleX="1.5"
            android:scaleY="1.5"
            app:icon="@drawable/ic_color_pick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_brush"
            app:layout_constraintStart_toEndOf="@+id/btn_save"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_brush"
            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/btn_brush_size"
            android:scaleX="1.5"
            android:scaleY="1.5"
            app:icon="@drawable/ic_brush"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_undo"
            app:layout_constraintStart_toEndOf="@+id/btn_color_pick"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_undo"
            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/btn_undo"
            android:scaleX="1.5"
            android:scaleY="1.5"
            app:icon="@drawable/ic_undo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_brush"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>